# nup

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  main.rs
app/: args.go  global.go  main_prompt.go  ping.go  prompt.go
services/: database.go  logger.go
src/: lstatic.rs  main.rs  ping.rs  statics.rs
src/types/: args.rs  config.rs  mod.rs
static/: prompts.go
statics/: prompts.go
types/: args.go  config.go  log.go
