[package]
name = "nup"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["Suraj Mandal"]
repository = "https://github.com/surajmandalcell/nup"
description = "A command line tool to monitor and log network downtime and latency."

[dependencies]
indoc = "2.0.1"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["blocking"] }

[[bin]]
name = "nup"
path = "src/main.rs"
